; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_schema_memcache.c_tluni_check_type_var.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_schema_memcache.c_tluni_check_type_var.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_tree = type { i32 }
%struct.TYPE_2__ = type { i32 (%struct.tl_tree*, %struct.tl_tree*)* }

@TLUNI_NEXT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @tluni_check_type_var(i8** %0, i8** %1, i32** %2, %struct.tl_tree** %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i32**, align 8
  %9 = alloca %struct.tl_tree**, align 8
  %10 = alloca %struct.tl_tree*, align 8
  %11 = alloca %struct.tl_tree*, align 8
  store i8** %0, i8*** %6, align 8
  store i8** %1, i8*** %7, align 8
  store i32** %2, i32*** %8, align 8
  store %struct.tl_tree** %3, %struct.tl_tree*** %9, align 8
  %12 = load i8**, i8*** %7, align 8
  %13 = getelementptr inbounds i8*, i8** %12, i32 -1
  store i8** %13, i8*** %7, align 8
  %14 = load i8*, i8** %13, align 8
  %15 = bitcast i8* %14 to %struct.tl_tree*
  store %struct.tl_tree* %15, %struct.tl_tree** %10, align 8
  %16 = load %struct.tl_tree**, %struct.tl_tree*** %9, align 8
  %17 = load i8**, i8*** %6, align 8
  %18 = getelementptr inbounds i8*, i8** %17, i32 1
  store i8** %18, i8*** %6, align 8
  %19 = load i8*, i8** %17, align 8
  %20 = ptrtoint i8* %19 to i64
  %21 = getelementptr inbounds %struct.tl_tree*, %struct.tl_tree** %16, i64 %20
  %22 = load %struct.tl_tree*, %struct.tl_tree** %21, align 8
  store %struct.tl_tree* %22, %struct.tl_tree** %11, align 8
  %23 = load %struct.tl_tree*, %struct.tl_tree** %11, align 8
  %24 = call %struct.TYPE_2__* @TL_TREE_METHODS(%struct.tl_tree* %23)
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32 (%struct.tl_tree*, %struct.tl_tree*)*, i32 (%struct.tl_tree*, %struct.tl_tree*)** %25, align 8
  %27 = load %struct.tl_tree*, %struct.tl_tree** %11, align 8
  %28 = load %struct.tl_tree*, %struct.tl_tree** %10, align 8
  %29 = call i32 %26(%struct.tl_tree* %27, %struct.tl_tree* %28)
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %32, label %31

31:                                               ; preds = %4
  store i8* null, i8** %5, align 8
  br label %34

32:                                               ; preds = %4
  %33 = load i32, i32* @TLUNI_NEXT, align 4
  br label %34

34:                                               ; preds = %32, %31
  %35 = load i8*, i8** %5, align 8
  ret i8* %35
}

declare dso_local %struct.TYPE_2__* @TL_TREE_METHODS(%struct.tl_tree*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
